k8s/srv/2-deployment-gcloud-service-account.yaml
---
apiVersion: v1
kind: Namespace
# `$ kubectl get ns`                                              - to view all available namespaces
# `$ kubectl get pods -n ${NAMESPACE_NAME}`                       - to view all available pods under a namespace
# `$ kubectl exec -n ${NAMESPACE_NAME} -it ${POD_ID} -- bash`     - execute and SSH to the pod
# `$ root@gcloud-548d547b84-jcd4g:/# gcloud alpha storage ls`     - to list all buckets in storage
# `$ kubectl get sa -n ${NAMESPACE_NAME}`                         - to list all service accounts that are associated with a namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcloud
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcloud
  template:
    metadata:
      labels:
        app: gcloud
    spec:
      serviceAccountName: service-a
      containers:
        - name: cloud-sdk
          image: google/cloud-sdk:latest
          command: ["/bin/bash", "-c", "--"]
          args: ["while true; do sleep 30; done;"]
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: iam.gke.io/gke-metadata-server-enabled
                    operator: In
                    values:
                      - "true"
