k8s/srv/3-service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-container
  namespace: default
spec:
  selector:
    app: frontend-container
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-class
  namespace: default
spec:
  ingressClassName: external-nginx
  rules:
    - host: pro.adam-ocheri-tech-art.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-container
                port:
                  number: 3000
